支持将html嵌入到go程序中

--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WebSocket Table</title>
+    <title>Http(s)抓包工具-网页</title>
     <style>
         table {
             width: 100%;
